# csci4110u-final

./: .clangd  .gitignore  README.md  build.bat  meson.build  run-optimus.sh
report/: code.typ  final.typ  references.yaml
shaders/: frag.glsl  gundam.glsl  magnemite.glsl  ray_marcher.glsl  scene.glsl  sdf.glsl  vert.glsl
shaders/util/: screen-frag.glsl  screen-vert.glsl  vert.glsl
src/: frag.glsl  gl_errors.hpp  logging.hpp  main.cpp  shader_manager.cpp  shader_manager.hpp  vert.glsl  window.cpp  window.hpp
subprojects/: FileWatch.wrap  stumpless.wrap
subprojects/FileWatch/: meson.build
subprojects/glad/: meson.build
subprojects/glad/include/GL/: gl.h
subprojects/glad/include/glad/: gl.h
subprojects/packagefiles/FileWatch/: meson.build
